fix: overflow product list filter

--- a/styles/_product-list.scss
+++ b/styles/_product-list.scss
@@ -214,14 +214,13 @@ main {
     .sidebar_wrapper {
       padding: 0;
       .outer_wrapper {
-        overflow: hidden;
         width: 100%;
         height: auto;
         min-height: 0;
-        max-height: 100vh;
         padding-bottom: 100px;  
         @include sm {
           overflow: scroll;
+          max-height: 100vh;
         }
         .inner_wrapper {
           padding-top: 45px;
